Fixed spacing for nav items

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ nav ul li {
 nav ul li a {
 	color: #828282;
 	font-size: 18px;
-	padding-left: 80px;
+	padding-left: 40px;
 	text-decoration: solid;
 	text-transform: uppercase; 
 }
